# helMiO

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README.tr.md  SECURITY.md  docker-compose.yml  eslint.config.js  jsconfig.json  package-lock.json  package.json  stackvo.json  vite.config.js  vitest.config.js
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agent/: .env.example  Cargo.toml  README.md  package.json
agent/src/: index.js  main.rs  xmlrpc.rs
backend/: .env.example  package.json
backend/scripts/: seedApiTokens.js  seedChannels.js
backend/src/: config.js  index.js  realtime.js  schemas.js
backend/src/auth/: jwt.js  rbac.js  secretBox.js
backend/src/connectors/: AgentConnector.js  BaseConnector.js  DockerConnector.js  LocalConnector.js  SshUnixSocketConnector.js  TcpXmlRpcConnector.js  index.js
backend/src/events/: eventBus.js
backend/src/middleware/: auth.js  rateLimit.js
backend/src/routes/: apitokens.js  audit.js  auth.js  channels.js  fleet.js  healthchecks.js  ingest.js  overview.js  processes.js  servers.js  users.js  util.js
backend/src/services/: healthCheckService.js  installerService.js  notifierService.js  supervisorService.js
backend/src/store/: apiTokenStore.js  auditStore.js  channelStore.js  eventStore.js  healthCheckStore.js  metricsStore.js  serverStore.js  userStore.js
eventlistener/: README.md  helmio_eventlistener.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js  socket.js
frontend/src/components/: ConfigPanel.vue  DataPanel.vue  DonutChart.vue  EventListenerPanel.vue  HealthChecksPanel.vue  LogPanel.vue  PageShell.vue  ProcessDetailPanel.vue  ProcessTable.vue  ProgramBuilder.vue  (+7 more)
src/: App.vue  main.js
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: crypto.rs  db.rs  error.rs  lib.rs  main.rs  meta.rs  realtime.rs
src-tauri/src/commands/: audit.rs  bulk.rs  channels.rs  fleet.rs  groups.rs  healthchecks.rs  mod.rs  overview.rs  process.rs  servers.rs
src-tauri/src/services/: healthcheck.rs  installer.rs  mod.rs  notifier.rs
src-tauri/src/store/: audit.rs  channels.rs  healthchecks.rs  metrics.rs  mod.rs  servers.rs
src-tauri/src/supervisor/: config.rs  connector.rs  http.rs  mod.rs  service.rs  xmlrpc.rs
src-tauri/src/supervisor/connectors/: agent.rs  docker.rs  local.rs  mod.rs  ssh.rs  tcp.rs
src/api/: client.js  ipc.js  socket.js
src/components/: ConfigPanel.vue  DataPanel.vue  DonutChart.vue  HealthChecksPanel.vue  LogPanel.vue  PageShell.vue  ProcessDetailPanel.vue  ProcessTable.vue  ProgramBuilder.vue  ServerCard.vue  ServerFormDrawer.vue  ServerListPanel.vue  SidePanel.vue  StatusChip.vue  SupervisorInstallPanel.vue  TrendChart.vue
src/composables/: useFitHeight.js
src/i18n/: index.js
src/plugins/: vuetify.js
src/router/: index.js
src/stores/: auth.js  realtime.js  servers.js  ui.js
src/styles/: vuetify-settings.scss
src/utils/: format.js
src/views/: AuditView.vue  ChannelsView.vue  DashboardView.vue  FleetView.vue  ServerDetailView.vue  ServersView.vue
test/: README.md  docker-compose.yml  run.mjs  seed-demo.sh  smoke.mjs
(+22 files in other folders)
